# watch-unlock-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  test.c
.ci/local/: PKGBUILD.source  generate_pkgbuild.sh  local_build.sh  prepare_release.sh  remote_build.sh
conf/pam.d/: apple-watch
conf/security/: apple_watch.conf
src/: conf.rs  get_watch_status.rs  lib.rs  main.rs  pam.rs  watch.rs
src/cli/: main.rs
src/cli/cmds/: mod.rs  pam_test.rs  query_status.rs  user.rs
src/pam/: conv.rs  lib.rs
